# xine-lib

./: .cvsignore  .hgignore  .hgsigs  AUTHORS  CREDITS  ChangeLog  FAQ  Makefile.am  Makefile.in  README  README-VDPAU  TODO  acconfig.h  autogen.sh  automake.diff  configure.ac  configure.in  cvscompile.sh  version.sh
contrib/: Makefile.am  README.contrib  ffmpeg-distfiles  ffmpeg-universal.sh
contrib/a52dec/: Makefile.am  a52.h  a52_internal.h  bit_allocate.c  bitstream.c  bitstream.h  downmix.c  imdct.c  parse.c  tables.h
contrib/ffmpeg/: configure  makefile.xine.in
contrib/gsm610/: Makefile.am  gsm_create.c  long_term.c  lpc.c  private.h  rpe.c  short_term.c  table.c
contrib/libcdio/: Makefile.am  _cdio_sunos.c  cdio.c  cdio_assert.h  ds.c  image.h  xa.c
contrib/libdca/: Makefile.am  downmix.c  parse.c
contrib/libdha/: Makefile.am  mmi.c  mtrr.c
contrib/libfaad/: Makefile.am  bits.c  bits.h  cfft.c  common.c  common.h  decoder.c  decoder.h  diff_from_faad2-2.7.patch  drc.c  drc.h  error.c  error.h  hcr.c  huffman.c  ic_predict.c  neaacdec.h  pns.c  ps_dec.c  ps_syntax.c  pulse.h  rvlc.c  sbr_dec.c  sbr_e_nf.c  sbr_e_nf.h  sbr_fbt.c  sbr_hfadj.c  sbr_hfadj.h  sbr_hfgen.h  sbr_qmf.c  sbr_qmf.h  sbr_syntax.c  sbr_syntax.h  sbr_tf_grid.h  specrec.c  ssr_fb.c  ssr_ipqf.c  ssr_win.h  structs.h  syntax.c
contrib/libmad/: Makefile.am  bit.c  decoder.c  frame.c  huffman.c  layer3.c
contrib/libmpcdec/: Makefile.am  idtag.c  mpc_decoder.c  streaminfo.c
contrib/libvcd/: bitvec.h  directory.c  files.c  image.c  info_private.c  pbc.c  salloc.c  sector.c  stream.c  stream_stdio.c  vcd.h  vcd_assert.h
contrib/libxdg-basedir/: Makefile.am  basedir.c  basedir.h  diff_from_libxdg-basedir_0.1.2.patch
contrib/nosefart/: Makefile.am  fds_snd.c  fmopl.c  log.c  memguard.c  nes6502.c  nes6502.h  nes_apu.c  nsf.c  nsf.h  types.h  vrcvisnd.c
contrib/vidix/: Makefile.am  vidixlib.c
doc/: Doxyfile.in  FAQ  FAQ-lib  FAQ-lib_es  FAQ.in  FAQ_es  FAQ_es.in  FAQ_fr  FAQ_it  FAQ_pl  MRL.txt  MRLs  Makefile.am  README  README-lib.solaris  README.MINGWCROSS  README.WIN32  README.config_en  README.dvb  README.dxr3  README.dxr3_pl  README.freebsd  README.irix  README.logging  README.mrl  README.network_dvd  README.opengl  README.plugins  README.solaris  README.syncfb  README.tvmode  README.xinerc  README_xxmc.html  bug_report_form  dataflow.dia  dvb_channels  xine-lib-API.cfg
doc/faq/: .hgignore  Makefile.am  README  faq.docbook  faq.html  faq.sgml  faq.txt
doc/hackersguide/: .hgignore  Makefile.am  README  architecture.fig  hackersguide.docbook  hackersguide.html  hackersguide.sgml  internals.docbook  internals.sgml  intro.docbook  intro.sgml  library.docbook  library.fig  library.sgml  output.docbook  output.sgml  overlays.fig  overview.docbook  overview.sgml  post_frame.fig  stream.sgml
doc/internal/: HOWTO.release  README
doc/man/: Makefile.am
doc/xine-lib-API/: Makefile.am
include/: .cvsignore  .hgignore  Makefile.am  audio_out.h  config.h  video_out.h  xine.h  xine.h.in  xine.h.tmpl.in
include/xine/: Makefile.am  alphablend.h  array.h  attributes.h  audio_decoder.h  audio_out.h  broadcaster.h  buffer.h  compat.h  configfile.h  demux.h  input_plugin.h  io_helper.h  list.h  metronom.h  mfrag.h  osd.h  plugin_catalog.h  pool.h  post.h  refcounter.h  resample.h  ring_buffer.h  scratch.h  sorted_array.h  spu.h  spu_decoder.h  stree.h  tickets.h  vdr.h  video_decoder.h  video_out.h  video_overlay.h  vo_scale.h  xine_buffer.h  xine_internal.h  xine_module.h  xine_plugin.h  xineutils.h  xmllexer.h  (+1 more)
lib/: Makefile.am  asprintf.c  basename.c  dirent_msvc.c  gettimeofday.c  gmtime.c  hstrerror.c  memmem.c  os_internal.h  os_types.h  setenv.c  strlcat.c  strlcpy.c  strndup.c  strpbrk.c  strsep.c  strtok_r.c  swab.c  timegm.c  unsetenv.c
m4/: Makefile.am  _xine.m4  aa.m4  alsa.m4  arts.m4  as.m4  attributes.m4  audio_out.m4  caca.m4  decoders.m4  directx.m4  dl.m4  dvdnav.m4  esd.m4  ffmpeg.m4  freetype2.m4  gas.m4  getopt_long.m4  gettext.m4  iconv.m4  input.m4  ioctl_request.m4  irixal.m4  lib-prefix.m4  libFLAC.m4  libfame.m4  libtool15.m4  macosx.m4  misc.m4  objc.m4  ogg.m4  opengl.m4  optimizations.m4  package.m4  pkg.m4  programs.m4  pthreads.m4  sdl.m4  speex.m4  summary.m4  (+10 more)
m4/gettext/: Makefile.am
misc/: .cvsignore  .hgignore  Makefile.am  Makefile.common  SlackBuild.in  autogen.sh  build_rpms.sh.in  cdda_server.c  guenter.spec.in  guenter_rpms.sh.in  libdvdcss-1.2.6-network.patch  libxine.pc.in  make_release.sh  relchk.sh.in  upload.pl  xine-config  xine-config.in  xine-fontconv.c  xine-lib.spec.in  xine-list.c  xine-logoconv.c  xine_logo.mpv  xine_logo.zyuy2
misc/debian/: changelog  control  copyright  menu  rules  xine.docs
misc/fonts/: Makefile.am
src/: Makefile.am
src/audio_dec/: Makefile.am  ff_dvaudio_decoder.c  ff_dvdata.h  fooaudio.c  gsm610.c  latm.c  xine_a52_decoder.c  xine_a52_parser.h  xine_a52_spdif.c  xine_dts_decoder.c  xine_faad_decoder.c  xine_lpcm_decoder.c  xine_mad_decoder.c  xine_musepack_decoder.c
src/audio_out/: Makefile.am  audio_alsa05_out.c  audio_alsa_out.c  audio_alsa_out.h  audio_arts_out.c  audio_arts_out.h  audio_coreaudio_out.c  audio_directx2_out.c  audio_directx_out.c  audio_esd_out.c  audio_esd_out.h  audio_file_out.c  resample.c  (+14 more)
win32/: .cvsignore  Makefile.am  README  config.h  libdvdnav.def  libdvdnav.dsp  libdvdnav.plg  libdvdread.def  libdvdread.dsp  libdvdread.plg  libxine.def  libxine.dsp  libxine.dsw  libxine.plg  libxinesupport.def  libxinesuppt.dsp  libxinesuppt.plg  libxineutils.dsp  libxineutils.plg  xine.dsw  xineconsole.plg  xineplug_ao_out.def  xineplug_ao_out_directx.dsp  xineplug_ao_out_directx.plg  xineplug_ao_out_directx2.dsp  xineplug_decode_ ao.def  xineplug_decode_a52.dsp  xineplug_decode_a52.plg  xineplug_decode_divx4.dsp  xineplug_decode_divx4.plg  xineplug_decode_dts.dsp  xineplug_decode_dts.plg  xineplug_decode_ff.dsp  xineplug_decode_ff.plg  xineplug_decode_lpcm.dsp  xineplug_decode_lpcm.plg  xineplug_decode_mad.dsp  xineplug_decode_mad.plg  xineplug_decode_mpeg2.dsp  xineplug_decode_mpeg2.plg  (+60 more)
(+1885 files in other folders)
